@@ -1,3 +1,13 @@
+2008-10-23  Cosimo Cecchi  <cosimoc@gnome.org>
+
+        * logview.c:
+        (logview_help):
+        * main.c:
+        (create_option_context):
+        (main):
+	Remove libgnome usage; drop SM client code, as it doesn't
+	work (#547273).
+
 2008-10-22  Cosimo Cecchi  <cosimoc@gnome.org>
 
         Add license information in the about dialog (#501084).
